# audacia-llm-eval

./: .gitignore  LICENSE  pyproject.toml
audacia_llm_eval/: main.py  run.py
audacia_llm_eval/csvs/: test.csv  test_txt.csv
audacia_llm_eval/models/: runnable_test.py
audacia_llm_eval/services/: path_handler.py  test_list.py  test_runner.py
